# opentelemetry-ray

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docs-requirements.txt  pyproject.toml  tox.ini
.github/workflows/: docs.yml  publish-adhoc.yml
docs/: conf.py  index.rst
docs/instrumentation/: ray_serve.rst
docs/resource/: ray.rst
opentelemetry-instrumentation-ray-serve/: README.md  pyproject.toml  test-requirements-latest.txt  test-requirements-oldest.txt
opentelemetry-instrumentation-ray-serve/src/opentelemetry/instrumentation/ray/serve/: __init__.py  package.py
opentelemetry-instrumentation-ray-serve/tests/: test_instrumentor.py
opentelemetry-resource-detector-ray/: README.md  pyproject.toml  test-requirements-latest.txt  test-requirements-oldest.txt
opentelemetry-resource-detector-ray/src/opentelemetry/resource/detector/ray/: __init__.py  _attributes.py  package.py
opentelemetry-resource-detector-ray/tests/: test_resource_detector.py
