[project]
name = "opentelemetry-ray"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-resource-detector-ray[detects]",
    "opentelemetry-instrumentation-ray-serve[instruments]"
]

# https://docs.astral.sh/uv/reference/settings/
[tool.uv]
package = false # https://docs.astral.sh/uv/reference/settings/#package
required-version = ">=0.6.0"

[tool.uv.sources]
opentelemetry-resource-detector-ray = { workspace = true }
opentelemetry-instrumentation-ray-serve = { workspace = true }

[tool.uv.workspace]
members = [
    "opentelemetry-resource-detector-ray",
    "opentelemetry-instrumentation-ray-serve",
]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py39"
line-length = 79
extend-exclude = ["_template", "*_pb2*.py*"]
output-format = "concise"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
# pylint: https://github.com/astral-sh/ruff/issues/970
select = [
  "I",   # isort
  "F",   # pyflakes
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "PLC", # pylint convention
  "PLE", # pylint error
  "Q",   # flake8-quotes
  "A",   # flake8-builtins
]
ignore = [
  "E501", # line-too-long
]

[tool.ruff.lint.isort]
detect-same-package = false
known-first-party = ["opentelemetry"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportMissingTypeStubs = false
pythonVersion = "3.9"
reportPrivateUsage = false
include = [
    "opentelemetry-resource-detector-ray/src"
]

exclude = []

[dependency-groups]
dev = [
    "tox",
    "tox-uv>=1",
    "pre-commit",
]
